<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Welcome"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:background="@color/colorPrimaryDark">
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.12"
        android:src="@drawable/logo1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:text="@string/text2"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_regular"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.28"
        android:background="@drawable/round_button"
        android:text="@string/btn1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_regular"
        android:onClick="LoginFunc"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.28"
        android:text="@string/text3"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_regular"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.28"
        android:background="@drawable/round_button"
        android:text="@string/btn2"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_regular"
        android:onClick="SignFunc"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>