<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SingUp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:src="@drawable/logo1"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/text6"
                android:gravity="center"
                android:fontFamily="@font/cairo_black"
                android:textColor="@color/colorWhite"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint3"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edName" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint1"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edEmail" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint4"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edPhone"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/hint5"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edPass"
                android:inputType="textPassword"
                android:gravity="right"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint6"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edPassConfirm"
                android:inputType="textPassword"
                android:gravity="right"
                />

            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/address"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/text9"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="20dp"/>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:fontFamily="@font/cairo_regular"
                android:background="@drawable/round_button"
                android:layout_margin="20dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/sign_up"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text7"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="20dp"
                android:id="@+id/GoToSignIn"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>