<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/text26"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/text27"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:fontFamily="@font/cairo_regular"
                    android:text="000000"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/text28"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/red_button" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:drawableRight="@drawable/home"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/text29"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:drawableRight="@drawable/settings"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/text30"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:drawableRight="@drawable/logout"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/text31"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>