<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Orders$PlaceholderFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/colorRecycle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text20"
                android:gravity="center|bottom"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairo_regular"
                android:textSize="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/text24"
                android:textColorHint="@color/colorPrimaryDark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorRecycle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text21"
                    android:gravity="center|bottom"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="20dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/colorRecycle">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="12dp"
                    android:src="@drawable/calendar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text23"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="15dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="12dp"
                    android:src="@drawable/calendar"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text22"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="15dp" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>