<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.Requestes"
    tools:showIn="@layout/app_bar_requestes"
    android:orientation="vertical"
    android:background="@color/colorRecycle">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_button"
                android:text="@string/text25"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:drawableTop="@drawable/red_button"
                android:onClick="orderFunc"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="+"
                android:textSize="30dp"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:onClick="ordFunc"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text20"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairo_regular"
                android:textSize="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/text24"
                android:textColorHint="@color/colorPrimaryDark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text21"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="20dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/calendar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text23"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="15dp" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/calendar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text22"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="15dp" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>





</LinearLayout>